Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12447

Fedora28 Lustre client build failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0, Lustre 2.12.3
    • None
    • None
    • Fedora release 28 (Twenty Eight)

      gcc (GCC) 8.0.1 20180324 (Red Hat 8.0.1-0.20)
      Copyright (C) 2018 Free Software Foundation, Inc.
    • 3
    • 9223372036854775807

      Hit following build failure when trying to build lustre master client:

      lfs.c:5571:4: error: ‘strncpy’ specified bound 4096 equals destination size [-Werror=stringop-truncation]
          strncpy(mntdir, dname, sizeof(mntdir));
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      
      lfs_project.c: In function ‘lfs_project_item_alloc’:
      lfs_project.c:72:2: error: ‘strncpy’ specified bound 4096 equals destination size [-Werror=stringop-truncation]
        strncpy(lpi->lpi_pathname, pathname, sizeof(lpi->lpi_pathname));
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: